# mpi_test

./: .gitignore  CMakeLists.txt  Makefile  README.md  ascicgpu030.sh  main-wrapper.sh  main.cpp  one_sided.cpp  one_sided_gpu.cpp  persistent.cpp  persistent_gpu.cpp  run-all.sh  send_recv.cpp  send_recv_gpu.cpp  summit-env.sh
